# mongo-vector-embeddings-helsinki-python-meetup-demo

./: .gitignore  Makefile  README.md  demo.ipynb  mongo.ipynb  pyproject.toml
src/: embeddings.py  repository.py
